minor rework, jdk8 compat